// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Default story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article
    class="card w-96"
  >
    <header
      class="card__header"
    >
      <div
        class="fpo"
      >
        Card Header
      </div>
    </header>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <footer
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Card /> Dragging story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article
    class="card card--dragging w-96"
  >
    <header
      class="card__header"
    >
      <div
        class="fpo"
      >
        Card Header
      </div>
    </header>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <footer
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Card /> Horizontal story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article
    class="card flex-row"
  >
    <header
      class="card__header"
    >
      <div
        class="fpo"
      >
        Card Header
      </div>
    </header>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <footer
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Card /> InteractiveOnHover story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article
    class="card card--raised"
  >
    <div
      class="card__body"
    >
      <div
        class="fpo p-6"
      >
        Card Contents
      </div>
    </div>
  </article>
</div>
`;

exports[`<Card /> LoadingProfileCard story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    aria-label="Loading example profile card"
    role="status"
  >
    <article
      class="card w-96"
    >
      <div
        class="card__body"
      >
        <div
          aria-hidden="true"
          class="mb-3 skeleton skeleton-circle skeleton--is-animating"
          style="width: 48px; height: 48px;"
        />
        <div
          aria-hidden="true"
          class="mb-2 mt-2 skeleton skeleton--is-animating"
          style="width: 15ch; height: 4rem;"
        />
        <hr
          class="hr"
        />
        <div
          aria-hidden="true"
          class="mb-2 mt-2 skeleton skeleton--is-animating"
          style="width: 30ch; height: 1.5rem;"
        />
        <div
          aria-hidden="true"
          class="mb-2 mt-2 skeleton skeleton--is-animating"
          style="width: 25ch; height: 1.5rem;"
        />
        <div
          aria-hidden="true"
          class="mb-2 mt-2 skeleton skeleton--is-animating"
          style="width: 10ch; height: 1.5rem;"
        />
      </div>
    </article>
  </div>
</div>
`;

exports[`<Card /> Raised story renders snapshot 1`] = `
<div
  class="p-8"
>
  <article
    class="card card--raised w-96"
  >
    <header
      class="card__header"
    >
      <div
        class="fpo"
      >
        Card Header
      </div>
    </header>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <footer
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </footer>
  </article>
</div>
`;
